--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "simulate": "node cli/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "A web implementation of So Long Sucker - a 4-player negotiation/betrayal board game",
+  "dependencies": {
+    "dotenv": "^16.3.1"
+  },
   "devDependencies": {
     "vite": "^6.4.1"
   }
