--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,9 @@ VITE_OPENAI_API_KEY=your_openai_api_key_here
 # Anthropic Claude API (https://console.anthropic.com/)
 VITE_CLAUDE_API_KEY=your_claude_api_key_here
 
+# Google Gemini API (https://aistudio.google.com/apikey)
+VITE_GEMINI_API_KEY=your_gemini_api_key_here
+
 # Azure Claude (if using)
 VITE_AZURE_CLAUDE_API_KEY=your_azure_claude_key_here
 VITE_AZURE_CLAUDE_ENDPOINT=your_azure_endpoint_here
