--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,11 @@ VITE_GEMINI_API_KEY=your_gemini_api_key_here
 # Azure Claude (if using)
 VITE_AZURE_CLAUDE_API_KEY=your_azure_claude_key_here
 VITE_AZURE_CLAUDE_ENDPOINT=your_azure_endpoint_here
+
+# Azure DeepSeek V3 (if using)
+AZURE_DEEPSEEK_API_KEY=your_azure_deepseek_key_here
+AZURE_DEEPSEEK_RESOURCE=hellobusiness999-4411-resource
+AZURE_DEEPSEEK_MODEL=DeepSeek-V3.2
+
+# OpenRouter API (https://openrouter.ai/keys)
+OPENROUTER_API_KEY=your_openrouter_api_key_here
