--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 # Copy this file to .env and fill in your API keys
 
 # Groq API (https://console.groq.com/keys)
-VITE_GROQ_API_KEY=your_groq_api_key_here
+# Server-side (used by Vercel Functions)
+GROQ_API_KEY=your_groq_api_key_here
+# Frontend flag (set to "true" to enable Quick Play button)
+VITE_GROQ_ENABLED=true
 
 # OpenAI API (https://platform.openai.com/api-keys)
 VITE_OPENAI_API_KEY=your_openai_api_key_here
