--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,14 @@
 # Groq API (https://console.groq.com/keys)
 # Server-side (used by Vercel Functions)
 GROQ_API_KEY=your_groq_api_key_here
-# Frontend flag (set to "true" to enable Quick Play button)
+# Frontend flag (set to "true" to enable Free Play button)
 VITE_GROQ_ENABLED=true
+
+# Gemini API (https://aistudio.google.com/apikey)
+# Server-side (used by Vercel Functions)
+GEMINI_API_KEY=your_gemini_api_key_here
+# Frontend flag (set to "true" to enable Free Gemini button)
+VITE_GEMINI_ENABLED=true
 
 # OpenAI API (https://platform.openai.com/api-keys)
 VITE_OPENAI_API_KEY=your_openai_api_key_here
