chore: update gitignore, clean up AGENTS.md, add new providers to env.example

--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,7 @@ AZURE_DEEPSEEK_MODEL=DeepSeek-V3.2
 
 # OpenRouter API (https://openrouter.ai/keys)
 OPENROUTER_API_KEY=your_openrouter_api_key_here
+
+# AWS Bedrock (ABSK bearer token - from AWS console or bedrock-runtime)
+VITE_BEDROCK_API_KEY=your_bedrock_api_key_here
+VITE_BEDROCK_REGION=us-east-1
